--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <ul>
             <li><span class="date">01/25</span> 科学英語の過去問ページを作りました</li>
             <li><span class="date">01/25</span> 科学英語の日本語訳問題と単語確認用ページを追加しました</li>
-            <li><span class="date">01/22</span> アプリアイコンを設定いしました</li>
+            <li><span class="date">01/22</span> アプリアイコンを設定しました</li>
         </ul>
     </div>
 
@@ -204,6 +204,7 @@
     </script>
 </body>
 </html>
+
 
 
 
