--- a/ScientificEnglish/past exam2.html
+++ b/ScientificEnglish/past exam2.html
@@ -93,6 +93,7 @@
         .input-area {
             display: flex;
             flex-direction: column;
+            overflow-y: auto;
         }
 
         textarea {
@@ -215,3 +216,4 @@
     </script>
 </body>
 </html>
+
