--- a/ScientificEnglish/exercise_chapter3.html
+++ b/ScientificEnglish/exercise_chapter3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>地質学・生命史 演習（第3章・深海堆積物）</title>
+    <title>2025年度期末</title>
     <style>
         :root {
             --primary-color: #2c3e50;
@@ -331,4 +331,5 @@
         }
     </script>
 </body>
+
 </html>
