--- a/ScientificEnglish/index.html
+++ b/ScientificEnglish/index.html
@@ -199,11 +199,19 @@
             </div>
             <span class="arrow">▶</span>
         </a>
+        <a href="exercise_chapter3.html" class="quiz-card">
+            <div class="quiz-info">
+                <span class="quiz-title">2025過去問</span>
+                <span class="quiz-topic"></span>
+            </div>
+            <span class="arrow">▶</span>
+        </a>
     </div>
 
 </body>
 
 </html>
+
 
 
 
